@@ -1,5 +1,5 @@
 Package: rfs
-Version: 0.8-1
+Version: 0.9-1
 Section: utilities
 Priority: optional
 Architecture: INSERT ARCH HERE, PLEASE
