@@ -17,11 +17,12 @@ set -e
 
 LISTEN="0.0.0.0"
 PORT="5001"
+RFSD_USER="root"
 
 case "$1" in
 	start)
 		log_daemon_msg "Starting rfsd"
-		if start-stop-daemon --start --quiet --oknodo --pidfile /var/run/rfsd.pid --exec /usr/bin/rfsd -- -a ${LISTEN} -p ${PORT}; then 
+		if start-stop-daemon --start --quiet --oknodo --pidfile /var/run/rfsd.pid --exec /usr/bin/rfsd -- -a ${LISTEN} -p ${PORT} -u ${RFSD_USER}; then 
 			log_end_msg 0
 		else
 			log_end_msg 1
